feat: merge submodules into monorepo, fix core features and add README
- Merge frontend repos (zx_smalab_tea_mana_pc, zx_smalab_user_pc) as regular directories
- Fix video upload: add multipart size config (500MB), increase upload timeout to 5min
- Fix homework module: resolve TDZ bug, correct status filter values, add onMounted fallback
- Fix spurious error popups: remove global ElMessage.error from API interceptors
- Fix training module: status values, publish button, student detail data mapping
- Add isDeleted field to HomeworkAnswer builder, fix dashboard count queries
- Add README with Ubuntu setup instructions (MySQL, Java, Maven, Node.js)

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>